[tool.poetry]
name = "sim-cal"
version = "0.1.0"
description = ""
authors = ["Gabe Maayan <gabemgem@gmail.com>"]
readme = "README.md"
packages = [{include = "sim_cal"}]

[tool.poetry.dependencies]
python = "^3.11"
datetime = "^4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
